# Adaptive-RAG-Project

./: .gitignore  README.md  app.py  pyproject.toml  rag_core.py
__marimo__/session/: app.py.json
layouts/: app.grid.json
tests/: test_adaptive_functions.py  test_chunking.py  test_json_extraction.py
