[project]
name = "adaptive-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "duckdb>=1.5.3",
    "huggingface-hub>=1.19.0",
    "marimo>=0.23.9",
    "ollama>=0.6.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
